# ink

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY-REVIEW.md  build-install.sh  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pages.yml  release.yml
.github/workflows.disabled/: ci.yml  homebrew.yml
docs/: demo.tape  index.html  llms-full.txt  llms.txt
packaging/aur/: PKGBUILD
packaging/scoop/: ink.json
src/: app.rs  browser.rs  config.rs  image.rs  main.rs  search.rs  stats.rs  toc.rs  watch.rs  wikilink.rs
src/input/: mod.rs
src/layout/: mermaid.rs  mod.rs  table.rs
src/parser/: frontmatter.rs  mod.rs
src/render/: mod.rs  plain.rs
src/theme/: builtin.rs  detect.rs  mod.rs
tests/fixtures/: demo.md  diagrams.md  test.md
